--- a/app.yaml
+++ b/app.yaml
@@ -3,6 +3,6 @@ runtime: nodejs16 # or another supported version
 instance_class: F2
 
 env_variables:
-  DATABASE_URL: 'mysql://8wnf0x6a19ne:pscale_pw_v8QJXbiKDBCAM6K7IkrXyI0c7f_JOuUvl2NlRVSXxas@79qerhgskwu5.us-east-4.psdb.cloud/bookkeeping-app?ssl={"rejectUnauthorized":true}'
+  DATABASE_URL: 'mysql://jc9megviknwq:pscale_pw_7Y0txNCgPokKSQngYWAFXD3MH0_LHf2pSs5XwF3p-bE@79qerhgskwu5.us-east-4.psdb.cloud/bookkeeping-app?ssl={"rejectUnauthorized":true}'
   JWT_SECRET: ken12345
 
