--- a/app.yaml
+++ b/app.yaml
@@ -3,6 +3,6 @@ runtime: nodejs16 # or another supported version
 instance_class: F2
 
 env_variables:
-  DATABASE_URL: 'mysql://jc9megviknwq:pscale_pw_7Y0txNCgPokKSQngYWAFXD3MH0_LHf2pSs5XwF3p-bE@79qerhgskwu5.us-east-4.psdb.cloud/bookkeeping-app?ssl={"rejectUnauthorized":true}'
+  DATABASE_URL: 'mysql://bbxakfu2g1p2:pscale_pw_UR6RmNy-mWvERZtgcZXuq9x_1ia1ZhDpb-fdc59x84U@79qerhgskwu5.us-east-4.psdb.cloud/bookkeeping-app?ssl={"rejectUnauthorized":true}'
   JWT_SECRET: ken12345
 
